# lygus

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  docker-compose.yml  peers.txt  readme.md
bench/: spoiler_check.c
cmd/lygus-server/: main.c
src/ALRs/: alr.c  alr.h
src/event/: event_loop.c  event_loop.h
src/network/: mailbox.c  mailbox.h  network.c  network.h  wire_format.h
src/platform/: platform.h  platform_posix.c  platform_win32.c  platform_wind32.c
src/public/: lygus.c  lygus_errors.c  lygus_errors.h
src/raft/: raft_glue.c  raft_glue.h
src/server/: conn.c  conn.h  handler.c  handler.h  pending.c  pending.h  protocol.c  protocol.h  server.c  server.h
src/state/: kv_op.c  kv_op.h  kv_store.c  kv_store.h
src/storage/: storage_mgr.c  storage_mgr.h
src/storage/compression/: zstd_engine.c  zstd_engine.h
src/storage/snapshot/: snapshot.c  snapshot.h
src/storage/wal/: block_format.c  block_format.h  recovery.c  recovery.h  wal.c  wal.h  wal_index.c  wal_index.h  writer.c  writer.h
src/tests/: test_crc32c.c  test_kv_store.c  test_logging.c  test_varint.c  test_wal_crash.c
src/util/: crc32c.c  crc32c.h  logging.c  logging.h  timing.h  varint.c  varint.h
